[tool.poetry]
name = "flowmaster"
version = "0.1.0"
description = ""
authors = ["dmitrii.mashkov <mashkovd@live.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
faust-streaming = "^0.10.16"
pydantic-settings = "^2.0.3"
pyzeebe = "^3.0.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
isort = "^5.12.0"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
